piday-web/deployments/auth/virtual-service.staging.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtual-service
  namespace: piday-staging
spec:
  hosts:
    - "staging-auth.piday.world"
  gateways:
    - prod/istio-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: piday-staging-auth-keycloak
---
