piday-web/deployments/auth/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtual-service
  namespace: piday-dev
spec:
  hosts:
    - "piday-dev-auth.dvqdev.com"
  gateways:
    - dev/istio-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: piday-auth-keycloak
---
